trunk/Archive2/1e/ff8ecc2871e373/main.cpp
#include <iostream>
 
class C
{
public:
    int f() const;
private:
    int value = 42;
};
 
auto C::f() const { return value; }
 
 
int main()
{
    C c;
 
    std::cout << c.f() << std::endl;
}